...
                        android:gravity="center_vertical"
                        android:textStyle="bold"
                        android:textColor="@color/white"
                        android:drawableStart="@drawable/ic_event" />
                </LinearLayout>
                <Button
                    android:id="@+id/save_view_user"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="0dp"
                    android:textSize="@dimen/textsize"
                    android:text="Save Contact"
                    android:textStyle="bold"
                    android:gravity="center_vertical"
                    android:textColor="@color/white"
                    android:drawableStart="@drawable/ic_add_person"
                    android:background="@color/transparent"
                    />
...
