...
            android:weightSum="3">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/read_card"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:onClick="openReadNFCCard"
                android:background="@color/transparent"
                android:textColor="@color/white"
...
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_horizontal|center_vertical">
                <Button
                    android:id="@+id/btn_signout"
                    android:layout_width="@dimen/signoutbtn"
                    android:layout_height="@dimen/signoutbtn"
                    android:background="@drawable/ic_sign_out"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
...
